# drf-auth

./: docker-compose.yml  pyproject.toml  requirements.txt
project/accounts/: admin.py  forms.py  models.py
project/accounts/migrations/: 0001_initial.py
project/games/: models.py  permissions.py  serializers.py  urls.py  views.py
project/games/migrations/: 0001_initial.py  0002_alter_game_publisher.py
project/project/: settings.py  urls.py
